<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright 2013-2016 OCSInventory-NG/AndroidAgent contributors : mortheres, cdpointpoint,
 * Cédric Cabessa, Nicolas Ricquemaque, Anael Mobilia
 *
 * This file is part of OCSInventory-NG/AndroidAgent.
 *
 * OCSInventory-NG/AndroidAgent is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 2 of the License, or
 * (at your option) any later version.
 *
 * OCSInventory-NG/AndroidAgent is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with OCSInventory-NG/AndroidAgent. if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
-->
<resources>
    <string name="menu_settings">Configuration</string>
    <string name="menu_import">Import settings</string>
    <string name="menu_export">Export settings</string>
    <string name="menu_about">About</string>
    <string name="status_init">Ready</string>
    <string name="title_bt_launch">Send inventory</string>
    <string name="title_bt_show">Show inventory</string>
    <string name="title_bt_save">Store inventory</string>
    <string name="hint_status_bar">Status</string>
    <string name="title_bt_settings">Configuration</string>
    <string name="title_activity_ocsconfig">Settings</string>
    <string name="err_save_settings">Error saving configuration file</string>
    <string name="title_bt_validate">Submit</string>
    <string name="title_bt_default">Default value</string>
    <string name="ocs_ng">OCSInventory\nNG</string>
    <string name="title_activity_show_inventory">Inventory</string>
    <string name="state_saved">Inventory recorded on sdcard</string>
    <string name="state_send_prolog">Sending prolog to server</string>
    <string name="state_send_inventory">Sending inventory to server</string>
    <string name="state_sent_inventory">Inventory sent</string>
    <string name="state_send_error">Transmission Error</string>
    <string name="state_send_start">Transmission</string>
    <string name="state_build_inventory">Inventory in progress</string>
    <string name="nty_start_service">Service started</string>
    <string name="nty_inventory_sent">Inventory sent to OCS server</string>
    <string name="nty_downloads">Downloaded packages availables</string>

    <string name="nty_title">OCS-NG notification</string>
    <string name="msg_conf_exported">Settings exported</string>
    <string name="msg_conf_imported">Settings imported</string>
    <string name="unit_hour">hours</string>
    <string name="unit_minutes">minutes</string>
    <string name="title_activity_ocslaunch">Installation</string>
    <string name="err_cant_connect">Unable to connect to : </string>
    <string name="title_activity_ocsinst">ocs_inst</string>
    <string name="start_download_service">Start package update service</string>

</resources>